Smooth Stroke function in Grease Pencil not affecting Thickness of stroke when Repeat has value of 1 #87082

Closed
opened 2021-03-31 12:34:39 +02:00 by Matthew Gafford · 6 comments

Operating system: Win10 Home 64
Graphics card: rtx3070

Blender Version
Broken: 2.93
Worked: N/A

https://cdn.discordapp.com/attachments/349254115567861762/826766151731773472/unknown.png

You must set Repeat to 2 or higher in the Smooth Stroke box in order to affect the Thickness. It should still average the thickness of the strokes at least a little bit when Repeat is set to 1, but as of 2.93 it is not affected at all.

thicknessbug.blend
The .blend file I included is ready for immediate use of the "Point > Smooth" function, just hit F3 and type in "point smooth" and hit enter, and keep repeating with Shift-R. You will see the locations of the vertices averaging, but not the thickness. Only setting Repeat higher than 1 will include Thickness in the smoothing.

Every time I single-use this function again, it resets the value of the Repeat slider to 1, although remembers if I changed the Factor slider to something other than .500

Exact steps for others to reproduce the error:

  1. New file
  2. Delete default cube
  3. Add "Stroke" grease pencil object
  4. Edit Mode on GP object
  5. Select any consecutive vertices with varied stroke thickness, and use Smooth Stroke function ("Point > Smooth" in F3 Search)
  6. Open the Smooth Stroke window and make sure Thickness is ticked
Operating system: Win10 Home 64 Graphics card: rtx3070 Blender Version Broken: 2.93 Worked: N/A https://cdn.discordapp.com/attachments/349254115567861762/826766151731773472/unknown.png You must set Repeat to 2 or higher in the Smooth Stroke box in order to affect the Thickness. It should still average the thickness of the strokes at least a little bit when Repeat is set to 1, but as of 2.93 it is not affected at all. [thicknessbug.blend](https://archive.blender.org/developer/F9915629/thicknessbug.blend) The .blend file I included is ready for immediate use of the "Point > Smooth" function, just hit F3 and type in "point smooth" and hit enter, and keep repeating with Shift-R. You will see the locations of the vertices averaging, but not the thickness. Only setting Repeat higher than 1 will include Thickness in the smoothing. Every time I single-use this function again, it resets the value of the Repeat slider to 1, although remembers if I changed the Factor slider to something other than .500 Exact steps for others to reproduce the error: 1. New file 2. Delete default cube 3. Add "Stroke" grease pencil object 4. Edit Mode on GP object 5. Select any consecutive vertices with varied stroke thickness, and use Smooth Stroke function ("Point > Smooth" in F3 Search) 6. Open the Smooth Stroke window and make sure Thickness is ticked

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-03-31 13:00:11 +02:00
Member

I can confirm this issue on the latest 2.93.0 Alpha, branch: master (modified), commit date: 2021-03-31 07:46, hash: 645fc0c767.

I can confirm this issue on the latest 2.93.0 Alpha, branch: master (modified), commit date: 2021-03-31 07:46, hash: `645fc0c767`.

This issue was referenced by 8d45a96789

This issue was referenced by 8d45a9678955694cdd44aa709b5175308821dbba
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87082
No description provided.